fix: remove my previous post-build copy ...

--- a/AudicaModStarter/AudicaModStarter.csproj
+++ b/AudicaModStarter/AudicaModStarter.csproj
@@ -90,8 +90,6 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>echo "Done!"
-
-copy "$(TargetPath)" "D:\SteamLibrary\steamapps\common\Audica\Mods\$(TargetFileName)"</PostBuildEvent>
+    <PostBuildEvent>echo "Done!"</PostBuildEvent>
   </PropertyGroup>
 </Project>
